Organized project structure and improved code readability

--- a/TennisStoreClient/Components/Home/ProductBox.razor
+++ b/TennisStoreClient/Components/Home/ProductBox.razor
@@ -1,4 +1,5 @@
-﻿<div class="product-minimal">
+﻿@using TennisStoreSharedLibrary.Models
+<div class="product-minimal">
     <ProductHighlights Title="חדש בחנות" Products="newArrivals" />
     <ProductHighlights Title="מוצרים מובילים" Products="trendingProducts" />
     <ProductHighlights Title="המדורגים ביותר" Products="topRatedProducts" />
