--- a/TennisStoreClient/Components/Home/DealOfTheDay.razor
+++ b/TennisStoreClient/Components/Home/DealOfTheDay.razor
@@ -1,5 +1,5 @@
 ﻿<div class="product-featured">
-    <h2 class="title">Deal of the day</h2>
+    <h2 class="title">דיל היום</h2>
     <div class="showcase-wrapper has-scrollbar">
         @foreach (var product in FeaturedProducts)
         {
