--- a/TennisStoreClient/Pages/AccountPages/LoginPage.razor
+++ b/TennisStoreClient/Pages/AccountPages/LoginPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/identity/account/login"
+@using TennisStoreSharedLibrary.DTOs
 @implements IDisposable
 @using TennisStoreClient.Authentication
 
@@ -17,14 +18,14 @@
                         </div>
                         <div class="form-group mt-3">
                             <label class="form-label">Password</label>
-                            <input type="password" @bind="User.Password" class="form-control"></input>
+                            <input type="password" @bind="User.Password" class="form-control"/>
                         </div>
                         <div class="form-group mt-3">
-                            @if (messageDialogService.ShowSaveButton)
+                            @if (MessageDialogService.ShowSaveButton)
                             {
                                 <button class="btn btn-outline-primary float-end" type="submit">Login</button>
                             }
-                            <BusyButtonComponent ShowBusyButton="messageDialogService.ShowBusyButton"></BusyButtonComponent>
+                            <BusyButtonComponent ShowBusyButton="MessageDialogService.ShowBusyButton"></BusyButtonComponent>
                         </div>
 
                     </div>
@@ -33,20 +34,20 @@
         </div>
     </div>
 </div>
-<MessageDialog @ref="messageDialogService.messageDialog"></MessageDialog>
+<MessageDialog @ref="MessageDialogService.messageDialog"></MessageDialog>
 
 @code {
     LoginDTO User = new();
 
-    public void Dispose() => messageDialogService.Action -= StateHasChanged;
+    public void Dispose() => MessageDialogService.Action -= StateHasChanged;
 
-    protected override void OnInitialized() => messageDialogService.Action += StateHasChanged;
+    protected override void OnInitialized() => MessageDialogService.Action += StateHasChanged;
 
     async Task HandleLogin()
     {
-        var result = await accountService.Login(User);
-        messageDialogService.ShowSaveButton = false;
-        messageDialogService.ShowBusyButton = !messageDialogService.ShowSaveButton;
+        var result = await AccountService.Login(User);
+        MessageDialogService.ShowSaveButton = false;
+        MessageDialogService.ShowBusyButton = !MessageDialogService.ShowSaveButton;
         if (result.Flag)
         {
             var customAuthStateProvider = (CustomAuthenticationStateProvider)AuthStateProvider;
