--- a/TennisStoreClient/Pages/CartPages/MyCartPage.razor
+++ b/TennisStoreClient/Pages/CartPages/MyCartPage.razor
@@ -1,8 +1,10 @@
 ﻿@page "/shopping/cart/my-cart"
-@implements IDisposable
+@using Syncfusion.Blazor.Navigations
 @using TennisStoreClient.PrivateModels
+@using TennisStoreSharedLibrary.Models
 @using TennisStoreSharedLibrary.Responses
-@if (cartServiec.IsCartLoaderVisible)
+@implements IDisposable
+@if (CartService.IsCartLoaderVisible)
 {
     <LoadingPage />
 }
@@ -82,7 +84,7 @@ else
         </div>
     </div>
 }
-<MessageDialog @ref="messageDialogService.messageDialog"></MessageDialog>
+<MessageDialog @ref="MessageDialogService.messageDialog"></MessageDialog>
 <style>
     #changeCursor {
         cursor: pointer;
@@ -98,8 +100,8 @@ else
 
     protected async override Task OnInitializedAsync()
     {
-        MyCartOrders = await cartServiec.MyOrders();
-        messageDialogService.Action += StateHasChanged;
+        MyCartOrders = await CartService.MyOrders();
+        MessageDialogService.Action += StateHasChanged;
     }
 
     async Task HandleChange(Microsoft.AspNetCore.Components.ChangeEventArgs e, Order order)
@@ -110,27 +112,27 @@ else
             var getOrder = MyCartOrders.FirstOrDefault(_ => _.Id == order.Id);
             getOrder!.Quantity = int.Parse(e.Value!.ToString()!);
 
-            DisplayResponse(await cartServiec.AddToCart(new Product() { Id = order.Id }, getOrder.Quantity));
+            DisplayResponse(await CartService.AddToCart(new Product() { Id = order.Id }, getOrder.Quantity));
         }
         catch { }
     }
 
     async Task DeleteCart(Order cart)
     {
-        bool confirm = await js.InvokeAsync<bool>("confirm", "Are you sure you want to delete this form cart?");
+        bool confirm = await Js.InvokeAsync<bool>("confirm", "Are you sure you want to delete this form cart?");
         if (!confirm) return;
         MyCartOrders.Remove(MyCartOrders.FirstOrDefault(_ => _.Id == cart.Id)!);
-        DisplayResponse(await cartServiec.DeleteCart(cart));
+        DisplayResponse(await CartService.DeleteCart(cart));
     }
 
     private void DisplayResponse(ServiceResponse serviceResponse)
     {
         if (serviceResponse.Flag)
-            messageDialogService.messageDialog!.SetDialogValues("success", serviceResponse.Message);
+            MessageDialogService.messageDialog!.SetDialogValues("success", serviceResponse.Message);
         else
-            messageDialogService.messageDialog!.SetDialogValues("warning", serviceResponse.Message);
+            MessageDialogService.messageDialog!.SetDialogValues("warning", serviceResponse.Message);
 
-        messageDialogService.SetMessageDialog();
+        MessageDialogService.SetMessageDialog();
     }
 
     public void Click(PagerItemClickEventArgs args)
@@ -139,5 +141,5 @@ else
         TakeValue = Page.PageSize;
     }
 
-    public void Dispose() => messageDialogService.Action -= StateHasChanged;
+    public void Dispose() => MessageDialogService.Action -= StateHasChanged;
 }
