--- a/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
@@ -48,11 +48,11 @@
                     </div>
                     <div class="card-footer">
                         <div class="form-group mt-3">
-                            @if (messageDialogService.ShowSaveButton)
+                            @if (MessageDialogService.ShowSaveButton)
                             {
                                 <button type="submit" class="btn btn-outline-primary"><i class="fa fa-plus"></i>Save Product</button>
                             }
-                            <BusyButtonComponent ShowBusyButton="messageDialogService.ShowBusyButton"></BusyButtonComponent>
+                            <BusyButtonComponent ShowBusyButton="MessageDialogService.ShowBusyButton"></BusyButtonComponent>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
         </div>
     </div>
 </div>
-<MessageDialog @ref="messageDialogService.messageDialog"></MessageDialog>
+<MessageDialog @ref="MessageDialogService.messageDialog"></MessageDialog>
 
 
 @code {
@@ -71,26 +71,26 @@
     {
         await CategoryService.GetAllCategories();
         CategoryService.CategoryAction += StateHasChanged;
-        messageDialogService.Action += StateHasChanged;
+        MessageDialogService.Action += StateHasChanged;
     }
 
     async Task HandleSaveProduct()
     {
-        messageDialogService.ShowSaveButton = false;
-        messageDialogService.ShowBusyButton = !messageDialogService.ShowSaveButton;
+        MessageDialogService.ShowSaveButton = false;
+        MessageDialogService.ShowBusyButton = !MessageDialogService.ShowSaveButton;
         if (string.IsNullOrEmpty(MyProduct.Base64Img))
         {
-            messageDialogService.messageDialog!.SetDialogValues("warning", "You need to choose image");
-            messageDialogService.SetMessageDialog();
+            MessageDialogService.messageDialog!.SetDialogValues("warning", "You need to choose image");
+            MessageDialogService.SetMessageDialog();
             return;
         }
 
         var (flag, message) = await ProductService.AddProduct(MyProduct);
         if (flag)
-            messageDialogService.messageDialog!.SetDialogValues("success", message);
+            MessageDialogService.messageDialog!.SetDialogValues("success", message);
         else
-            messageDialogService.messageDialog!.SetDialogValues("danger", message);
-        messageDialogService.SetMessageDialog();
+            MessageDialogService.messageDialog!.SetDialogValues("danger", message);
+        MessageDialogService.SetMessageDialog();
         return;
     }
 
@@ -116,6 +116,6 @@
     public void Dispose()
     {
         CategoryService.CategoryAction -= StateHasChanged;
-        messageDialogService.Action -= StateHasChanged;
+        MessageDialogService.Action -= StateHasChanged;
     }
 }
