--- a/TennisStoreClient/Shared/Footer/Footer.razor
+++ b/TennisStoreClient/Shared/Footer/Footer.razor
@@ -159,31 +159,33 @@
 
             <ul class="footer-nav-list">
                 <li class="footer-nav-item">
-                    <h2 class="nav-title">Contact</h2>
+                    <h2 class="nav-title">צור קשר</h2>
                 </li>
                 <li class="footer-nav-item flex">
                     <div class="icon-box">
-                        <ion-icon name="location-outline" role="img" class="md hydrated" aria-label="location outline"></ion-icon>
+                        <i class="fa-solid fa-location-dot"></i>
                     </div>
 
                     <address class="content">
-                        419 State 414 Rte
-                        Beaver Dams, New York(NY), 14812, USA
+                        צביה ויצחק 2
+                        חיפה
                     </address>
                 </li>
                 <li class="footer-nav-item flex">
                     <div class="icon-box">
-                        <ion-icon name="call-outline" role="img" class="md hydrated" aria-label="call outline"></ion-icon>
+                        <i class="fa-solid fa-phone"></i>
                     </div>
 
-                    <a href="tel:+607936-8058" class="footer-nav-link">(607) 936-8058</a>
+                    <a href="tel:+972528395153" class="footer-nav-link">
+                        052-839-5153
+                    </a>
                 </li>
                 <li class="footer-nav-item flex">
                     <div class="icon-box">
-                        <ion-icon name="mail-outline" role="img" class="md hydrated" aria-label="mail outline"></ion-icon>
+                        <i class="fa-regular fa-envelope"></i>
                     </div>
 
-                    <a href="mailto:example@gmail.com" class="footer-nav-link">example@gmail.com</a>
+                    <a href="mailto:Shalmaev@bezeqint.net" class="footer-nav-link">Shalmaev@bezeqint.net</a>
                 </li>
             </ul>
 
