--- a/TennisStoreClient/wwwroot/css/style-prefix.css
+++ b/TennisStoreClient/wwwroot/css/style-prefix.css
@@ -2232,7 +2232,7 @@ footer {
         content: '';
         position: absolute;
         bottom: 0;
-        left: 0;
+        right: 0;
         background: var(--tennis-ball-yellow);
         width: 60px;
         height: 1px;
