--- a/TennisStoreClient/wwwroot/css/style.css
+++ b/TennisStoreClient/wwwroot/css/style.css
@@ -1812,7 +1812,7 @@ footer {
         content: '';
         position: absolute;
         bottom: 0;
-        left: 0;
+        right: 0;
         background: var(--tennis-ball-yellow);
         width: 60px;
         height: 1px;
