--- a/TennisStoreClient/Pages/CartPages/MyCartPage.razor
+++ b/TennisStoreClient/Pages/CartPages/MyCartPage.razor
@@ -3,6 +3,7 @@
 @using TennisStoreClient.PrivateModels
 @using TennisStoreSharedLibrary.Models
 @using TennisStoreSharedLibrary.Responses
+@using Order = TennisStoreClient.PrivateModels.Order;
 @implements IDisposable
 @if (CartService.IsCartLoaderVisible)
 {
