--- a/TennisStoreClient/Components/Home/DealOfTheDay.razor
+++ b/TennisStoreClient/Components/Home/DealOfTheDay.razor
@@ -16,7 +16,7 @@
                             }
                             @if (product.Rating % 1 != 0)
                             {
-                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-solid fa-star-half-stroke fa-flip-horizontal"></i>
                             }
                             @for (int i = (int)Math.Ceiling((decimal)product.Rating); i < 5; i++)
                             {
